--- a/Forntend/src/app/property-card/property-card.component.css
+++ b/Forntend/src/app/property-card/property-card.component.css
@@ -1,4 +1,47 @@
 .propimg{
-  height: 320px;
-  width: 320px;
+  height: 300px;
+  width: 300px;
+  overflow: hidden;
+}
+
+.card-img-wrapper{
+  overflow: hidden;
+  position: relative;
+}
+
+.card:hover img{
+  transform: scale(1.2,1.2);
+  transition-duration: 500ms;
+  transition-timing-function: ease-in-out;
+  opacity: .5;
+}
+
+.card img{
+  transform: scale(1,1);
+  transition-duration: 500ms;
+  transition-timing-function: ease-out;
+}
+
+.member-icon{
+  position: absolute;
+  bottom: -30%;
+  left: 0%;
+  right: 0%;
+margin-left: auto;
+margin-right: auto;
+opacity: 0%;
+}
+
+.card-img-wrapper:hover .member-icon{
+bottom: 0%;
+}
+
+.animate{
+  transition: all 0.3s ease-in-out;
+}
+
+card-img-top{
+  height: 350px;
+  width: 350px;
+
 }
