--- a/Forntend/src/app/property-card/property-card.component.html
+++ b/Forntend/src/app/property-card/property-card.component.html
@@ -1,12 +1,21 @@
-<div class="row">
-  <div class="shadow-lg col-sm-4">
-  <div class="card">
-    <img class="propimg" src="assets/image/House-free.png" >
-    <div class="card-body p-1">
-<h1>{{property.name}}</h1>
-<h2>{{property.type}}</h2>
-<h3>{{property.price}}</h3>
-    </div>
+<div class="card">
+  <div class="card-img-wrapper">
+  <img *ngIf="property.image"  class="card-img-top" src="assets/image/{{property.image}}.jpg" />
+  <img *ngIf="!property.image"  class="card-img-top" src="assets/image/House-free.png" />
+  <ul class="list-inline text-center member-icon animate">
+    <li class="list-inline-item">
+      <button class="btn btn-primary" routerLink="/detailprop/{{ property.id}}"><i class="fas fa-user-edit"></i>
+      </button>
+    </li>
+    <li class="list-inline-item">
+      <button class="btn btn-primary"><i class="fas fa-address-book"></i>
+      </button>
+    </li>
+  </ul>
 </div>
-</div>
+  <div class="card-body p-1">
+    <h1>{{ property.name }}</h1>
+    <h2>{{ property.type }}</h2>
+    <h3>{{ property.price }}</h3>
+  </div>
 </div>
